test/codegen/c/vectorize_loops.c
/* Generated by re2c 4.6 on Tue Sep 29 16:42:35 2026 */
// re2c $INPUT -o $OUTPUT -i --vectorize-loops
#include <assert.h>
#include <immintrin.h>
#include <string.h>

static int fill(int need) { (void)need; return 0; }

static int lex_vector(const unsigned char *input, size_t limit, const unsigned char **out_cur)
{
    const unsigned char *YYCURSOR = input;
    const unsigned char *YYLIMIT = input + limit;
    const unsigned char *YYMARKER = input;
    (void)YYMARKER;
    
{
	unsigned char yych;
	if (YYLIMIT <= YYCURSOR) fill(0);
	yych = *YYCURSOR;
	switch (yych) {
		case 0x00: goto yy1;
		case '\t':
		case ' ': goto yy3;
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9': goto yy5;
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'G':
		case 'H':
		case 'I':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'N':
		case 'O':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'T':
		case 'U':
		case 'V':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':
		case '_':
		case 'a':
		case 'b':
		case 'c':
		case 'd':
		case 'e':
		case 'f':
		case 'g':
		case 'h':
		case 'i':
		case 'j':
		case 'k':
		case 'l':
		case 'm':
		case 'n':
		case 'o':
		case 'p':
		case 'q':
		case 'r':
		case 's':
		case 't':
		case 'u':
		case 'v':
		case 'w':
		case 'x':
		case 'y':
		case 'z': goto yy7;
		default: goto yy2;
	}
yy1:
	++YYCURSOR;
	{ *out_cur = YYCURSOR; return 0; }
yy2:
	++YYCURSOR;
	{ *out_cur = YYCURSOR; return -1; }
yy3:
	++YYCURSOR;
	if (YYLIMIT <= YYCURSOR) fill(0);
	#if (defined(__STDC_VERSION__) && __STDC_VERSION__ >= 201112L) || (defined(__cplusplus) && __cplusplus >= 201103L)
	static_assert(sizeof(*(YYCURSOR)) == 1, "re2c: 8-bit character unit required for vector loop");
	#elif defined(__GNUC__) || defined(__clang__)
	_Static_assert(sizeof(*(YYCURSOR)) == 1, "re2c: 8-bit character unit required for vector loop");
	#endif
	while (!((YYLIMIT - YYCURSOR) < 33)) {
		#if defined(__AVX2__)
		__m256i yysimd0 = _mm256_loadu_si256((const __m256i*)(YYCURSOR));
		__m256i yysimd1 = _mm256_cmpeq_epi8(_mm256_or_si256(_mm256_subs_epu8(yysimd0, _mm256_set1_epi8(9)), _mm256_subs_epu8(_mm256_set1_epi8(9), yysimd0)), _mm256_setzero_si256());
		yysimd1 = _mm256_or_si256(yysimd1, _mm256_cmpeq_epi8(_mm256_or_si256(_mm256_subs_epu8(yysimd0, _mm256_set1_epi8(32)), _mm256_subs_epu8(_mm256_set1_epi8(32), yysimd0)), _mm256_setzero_si256()));
		if ((unsigned int)_mm256_movemask_epi8(yysimd1) != 0xFFFFFFFF) {
			break;
		}
		#else
		{
			unsigned int yysimd_ok = 1;
			for (size_t yyi = 0; yyi < 32; ++yyi) {
				unsigned char yyc = (unsigned char)(YYCURSOR)[yyi];
				if (!((yyc >= 9 && yyc <= 9) || (yyc >= 32 && yyc <= 32))) { yysimd_ok = 0; break; }
			}
			if (!yysimd_ok) break;
		}
		#endif
		YYCURSOR += 32;
	}
	#if defined(__AVX2__)
	_mm256_zeroupper();
	#endif
	yych = *YYCURSOR;
	switch (yych) {
		case '\t':
		case ' ': goto yy3;
		default: goto yy4;
	}
yy4:
	{ *out_cur = YYCURSOR; return 3; }
yy5:
	++YYCURSOR;
	if (YYLIMIT <= YYCURSOR) fill(0);
	#if (defined(__STDC_VERSION__) && __STDC_VERSION__ >= 201112L) || (defined(__cplusplus) && __cplusplus >= 201103L)
	static_assert(sizeof(*(YYCURSOR)) == 1, "re2c: 8-bit character unit required for vector loop");
	#elif defined(__GNUC__) || defined(__clang__)
	_Static_assert(sizeof(*(YYCURSOR)) == 1, "re2c: 8-bit character unit required for vector loop");
	#endif
	while (!((YYLIMIT - YYCURSOR) < 33)) {
		#if defined(__AVX2__)
		__m256i yysimd0 = _mm256_loadu_si256((const __m256i*)(YYCURSOR));
		__m256i yysimd1 = _mm256_cmpeq_epi8(_mm256_or_si256(_mm256_subs_epu8(yysimd0, _mm256_set1_epi8(57)), _mm256_subs_epu8(_mm256_set1_epi8(48), yysimd0)), _mm256_setzero_si256());
		if ((unsigned int)_mm256_movemask_epi8(yysimd1) != 0xFFFFFFFF) {
			break;
		}
		#else
		{
			unsigned int yysimd_ok = 1;
			for (size_t yyi = 0; yyi < 32; ++yyi) {
				unsigned char yyc = (unsigned char)(YYCURSOR)[yyi];
				if (!((yyc >= 48 && yyc <= 57))) { yysimd_ok = 0; break; }
			}
			if (!yysimd_ok) break;
		}
		#endif
		YYCURSOR += 32;
	}
	#if defined(__AVX2__)
	_mm256_zeroupper();
	#endif
	yych = *YYCURSOR;
	switch (yych) {
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9': goto yy5;
		default: goto yy6;
	}
yy6:
	{ *out_cur = YYCURSOR; return 1; }
yy7:
	++YYCURSOR;
	if (YYLIMIT <= YYCURSOR) fill(0);
	#if (defined(__STDC_VERSION__) && __STDC_VERSION__ >= 201112L) || (defined(__cplusplus) && __cplusplus >= 201103L)
	static_assert(sizeof(*(YYCURSOR)) == 1, "re2c: 8-bit character unit required for vector loop");
	#elif defined(__GNUC__) || defined(__clang__)
	_Static_assert(sizeof(*(YYCURSOR)) == 1, "re2c: 8-bit character unit required for vector loop");
	#endif
	while (!((YYLIMIT - YYCURSOR) < 33)) {
		#if defined(__AVX2__)
		__m256i yysimd0 = _mm256_loadu_si256((const __m256i*)(YYCURSOR));
		__m256i yysimd1 = _mm256_cmpeq_epi8(_mm256_or_si256(_mm256_subs_epu8(yysimd0, _mm256_set1_epi8(57)), _mm256_subs_epu8(_mm256_set1_epi8(48), yysimd0)), _mm256_setzero_si256());
		yysimd1 = _mm256_or_si256(yysimd1, _mm256_cmpeq_epi8(_mm256_or_si256(_mm256_subs_epu8(yysimd0, _mm256_set1_epi8(90)), _mm256_subs_epu8(_mm256_set1_epi8(65), yysimd0)), _mm256_setzero_si256()));
		yysimd1 = _mm256_or_si256(yysimd1, _mm256_cmpeq_epi8(_mm256_or_si256(_mm256_subs_epu8(yysimd0, _mm256_set1_epi8(95)), _mm256_subs_epu8(_mm256_set1_epi8(95), yysimd0)), _mm256_setzero_si256()));
		yysimd1 = _mm256_or_si256(yysimd1, _mm256_cmpeq_epi8(_mm256_or_si256(_mm256_subs_epu8(yysimd0, _mm256_set1_epi8(122)), _mm256_subs_epu8(_mm256_set1_epi8(97), yysimd0)), _mm256_setzero_si256()));
		if ((unsigned int)_mm256_movemask_epi8(yysimd1) != 0xFFFFFFFF) {
			break;
		}
		#else
		{
			unsigned int yysimd_ok = 1;
			for (size_t yyi = 0; yyi < 32; ++yyi) {
				unsigned char yyc = (unsigned char)(YYCURSOR)[yyi];
				if (!((yyc >= 48 && yyc <= 57) || (yyc >= 65 && yyc <= 90) || (yyc >= 95 && yyc <= 95) || (yyc >= 97 && yyc <= 122))) { yysimd_ok = 0; break; }
			}
			if (!yysimd_ok) break;
		}
		#endif
		YYCURSOR += 32;
	}
	#if defined(__AVX2__)
	_mm256_zeroupper();
	#endif
	yych = *YYCURSOR;
	switch (yych) {
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9':
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'G':
		case 'H':
		case 'I':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'N':
		case 'O':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'T':
		case 'U':
		case 'V':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':
		case '_':
		case 'a':
		case 'b':
		case 'c':
		case 'd':
		case 'e':
		case 'f':
		case 'g':
		case 'h':
		case 'i':
		case 'j':
		case 'k':
		case 'l':
		case 'm':
		case 'n':
		case 'o':
		case 'p':
		case 'q':
		case 'r':
		case 's':
		case 't':
		case 'u':
		case 'v':
		case 'w':
		case 'x':
		case 'y':
		case 'z': goto yy7;
		default: goto yy8;
	}
yy8:
	{ *out_cur = YYCURSOR; return 2; }
}

}

static int lex_scalar(const unsigned char *input, size_t limit, const unsigned char **out_cur)
{
    const unsigned char *YYCURSOR = input;
    const unsigned char *YYLIMIT = input + limit;
    const unsigned char *YYMARKER = input;
    (void)YYMARKER;
    
{
	unsigned char yych;
	if (YYLIMIT <= YYCURSOR) fill(0);
	yych = *YYCURSOR;
	switch (yych) {
		case 0x00: goto yy10;
		case '\t':
		case ' ': goto yy12;
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9': goto yy14;
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'G':
		case 'H':
		case 'I':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'N':
		case 'O':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'T':
		case 'U':
		case 'V':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':
		case '_':
		case 'a':
		case 'b':
		case 'c':
		case 'd':
		case 'e':
		case 'f':
		case 'g':
		case 'h':
		case 'i':
		case 'j':
		case 'k':
		case 'l':
		case 'm':
		case 'n':
		case 'o':
		case 'p':
		case 'q':
		case 'r':
		case 's':
		case 't':
		case 'u':
		case 'v':
		case 'w':
		case 'x':
		case 'y':
		case 'z': goto yy16;
		default: goto yy11;
	}
yy10:
	++YYCURSOR;
	{ *out_cur = YYCURSOR; return 0; }
yy11:
	++YYCURSOR;
	{ *out_cur = YYCURSOR; return -1; }
yy12:
	++YYCURSOR;
	if (YYLIMIT <= YYCURSOR) fill(0);
	yych = *YYCURSOR;
	switch (yych) {
		case '\t':
		case ' ': goto yy12;
		default: goto yy13;
	}
yy13:
	{ *out_cur = YYCURSOR; return 3; }
yy14:
	++YYCURSOR;
	if (YYLIMIT <= YYCURSOR) fill(0);
	yych = *YYCURSOR;
	switch (yych) {
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9': goto yy14;
		default: goto yy15;
	}
yy15:
	{ *out_cur = YYCURSOR; return 1; }
yy16:
	++YYCURSOR;
	if (YYLIMIT <= YYCURSOR) fill(0);
	yych = *YYCURSOR;
	switch (yych) {
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9':
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'G':
		case 'H':
		case 'I':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'N':
		case 'O':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'T':
		case 'U':
		case 'V':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':
		case '_':
		case 'a':
		case 'b':
		case 'c':
		case 'd':
		case 'e':
		case 'f':
		case 'g':
		case 'h':
		case 'i':
		case 'j':
		case 'k':
		case 'l':
		case 'm':
		case 'n':
		case 'o':
		case 'p':
		case 'q':
		case 'r':
		case 's':
		case 't':
		case 'u':
		case 'v':
		case 'w':
		case 'x':
		case 'y':
		case 'z': goto yy16;
		default: goto yy17;
	}
yy17:
	{ *out_cur = YYCURSOR; return 2; }
}

}

int main(void)
{
    unsigned char buf[256];
    const unsigned char *cur_v = NULL;
    const unsigned char *cur_s = NULL;

    memset(buf, 'A', sizeof(buf));
    for (size_t n = 1; n < 120; ++n) {
        buf[n] = 0;
        int res_v = lex_vector(buf, n + 1, &cur_v);
        int res_s = lex_scalar(buf, n + 1, &cur_s);
        assert(res_v == res_s);
        assert(res_v == 2);
        assert(cur_v == cur_s);
        buf[n] = 'A';
    }

    memset(buf, '5', sizeof(buf));
    for (size_t n = 1; n < 120; ++n) {
        buf[n] = 0;
        int res_v = lex_vector(buf, n + 1, &cur_v);
        int res_s = lex_scalar(buf, n + 1, &cur_s);
        assert(res_v == res_s);
        assert(res_v == 1);
        assert(cur_v == cur_s);
        buf[n] = '5';
    }

    memset(buf, ' ', sizeof(buf));
    for (size_t n = 1; n < 120; ++n) {
        buf[n] = 0;
        int res_v = lex_vector(buf, n + 1, &cur_v);
        int res_s = lex_scalar(buf, n + 1, &cur_s);
        assert(res_v == res_s);
        assert(res_v == 3);
        assert(cur_v == cur_s);
        buf[n] = ' ';
    }

    return 0;
}
